kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      imagePullSecrets:
        - name: docker-config-secret
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/std-ext-028-45/sausagestore/sausage-frontend:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: frontend-nginx-config
